tdf#88737 handle temporary array formula matrix circular reference

This does not solve the difference in how Excel seems to handle the
arguments and calculation, but some corner case. See bug comment 6.

Change-Id: Ifa331e8552587c40e1486a08093ed0df92a9d245